<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    
    <modelVersion>4.0.0</modelVersion>
    <groupId>nstu</groupId>
    <artifactId>migrator</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>migrator</name>
    <packaging>jar</packaging>
    
    <dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.1</version>
		</dependency>
		<!-- 
			<dependency>
		    <groupId>com.tshprecher</groupId>
		    <artifactId>antlr-psql</artifactId>
		    <version>0.1-SNAPSHOT</version>
		</dependency> 
		-->
	    <dependency>
	        <groupId>com.oracle.database.jdbc</groupId>
	        <artifactId>ojdbc11</artifactId>
	        <version>23.3.0.23.09</version>
    	</dependency>
    	
	</dependencies>
	
    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    
</project>